# rmeters

./: .gitignore  Cargo.toml  README.md  app.manifest  installer.iss  resources.rc
.github/workflows/: release.yml
src/: config.rs  main.rs  metrics.rs  renderer.rs  settings.rs  tray.rs  window.rs
