[package]
name = "rmeters"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.30"
once_cell = "1.19"

[build-dependencies]
embed-resource = "2.4"


[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Foundation_Numerics",
]
